--- a/contactus.html
+++ b/contactus.html
@@ -180,7 +180,7 @@
 
     <!-- Bootstrap JavaScript plugins-->
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-
+    <script src="scripts.js"></script>
 </body>
 
 </html>
