--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i
                                 class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
+                <!-- Weather Component -->
+                <div id="weather" class="d-none d-md-flex align-items-center">
+                    <i id="weather-icon"></i>
+                    <span id="weather-temp"></span>
+                    <span id="weather-description" class="d-none d-lg-inline"></span>
+                </div>
                 <span class="navbar-text ms-auto">
                     <a role="button" data-bs-toggle="modal" data-bs-target="#loginModal">
                         <i class="fa-solid fa-right-to-bracket"></i> Login
@@ -200,14 +206,9 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
-                            <i class="fa-solid fa-pause"></i>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa-solid fa-pause" id="faButton">
                         </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa-solid fa-play"></i>
-                        </button>
-                    </div>
                 </div>
             </div>
         </section>
@@ -311,7 +312,7 @@
 
     <!-- Bootstrap JavaScript plugins -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 
 </html>
