--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- HTML changes look good. -->
+
 <html lang="en">
 
 <head>
@@ -207,7 +210,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                         <button class="btn btn-danger btn-sm" id="carouselButton">
-                            <i class="fa-solid fa-pause" id="faButton">
+                            <i class="fa-solid fa-pause" id="faButton"></i>
                         </button>
                 </div>
             </div>
